# sklearn-numba-dpex

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: run_code_format_checks.yaml  run_docker_build.yaml  run_tests.yaml
benchmark/: kmeans.py
benchmark/ext_helpers/: daal4py.py  kmeans_dpcpp.py  sklearn.py
docker/: Dockerbuild  Dockerfile
scripts/: kmeans_numba_dpex_test.py  matmul_benchmark.sh  matmul_benchmark_run.py  pov_async_dispatch.py  topk_benchmark.sh  topk_benchmark_run.py
sklearn_numba_dpex/: __init__.py  exceptions.py
sklearn_numba_dpex/benchmark/: kmeans.py
sklearn_numba_dpex/benchmark/ext_helpers/: daal4py.py
sklearn_numba_dpex/common/: __init__.py  _utils.py  kernels.py  matmul.py  random.py  reductions.py  topk.py
sklearn_numba_dpex/common/tests/: test_kernels.py  test_matmul.py  test_random.py  test_reductions.py  test_topk.py  test_utils.py
sklearn_numba_dpex/device/: __init__.py  device.py
sklearn_numba_dpex/device/tests/: test_device_params.py
sklearn_numba_dpex/examples/: kmeans_numba_dpex.py  kmeans_numba_dpex_fused.py
sklearn_numba_dpex/kmeans/: daal4py.py  dpex.py  drivers.py  engine.py  kernels.py  sklearn.py
sklearn_numba_dpex/kmeans/kernels/: __init__.py  _base_kmeans_kernel_funcs.py  compute_euclidean_distances.py  compute_inertia.py  compute_labels.py  compute_labels_inertia.py  kmeans_numba_dpex_fused.py  kmeans_plusplus.py  lloyd_single_step.py  utils.py
sklearn_numba_dpex/kmeans/tests/: test_kmeans.py
sklearn_numba_dpex/knn/: drivers.py
sklearn_numba_dpex/patches/: load_numba_dpex.py
sklearn_numba_dpex/patches/tests/: test_patches.py
sklearn_numba_dpex/testing/: __init__.py  config.py  sklearn_pytest_plugin.py
sklearn_numba_dpex/tests/: test_kmeans.py  test_patches.py
sklearn_numba_dpex/utils/: __init__.py  _device.py  cached_kernel_factory.py
sklearn_numba_dpex/utils/tests/: test_device_params.py
sklearn_numba_dppy/tests/: test_kmeans.py
